logs/hurry.jquerylayout.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/hurry'...
Listing './lib/python3.5/site-packages/hurry/jquery'...
Listing './lib/python3.5/site-packages/hurry/jquery/jquery-build'...
Compiling './lib/python3.5/site-packages/hurry/jquery/prepare.py'...
***   File "./lib/python3.5/site-packages/hurry/jquery/prepare.py", line 32
    print 'recursively removing "%s"' % jquery_dest_path
                                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/hurry/jquerylayout'...
Listing './lib/python3.5/site-packages/hurry/jquerylayout/jquerylayout-build'...
Listing './lib/python3.5/site-packages/hurry/jqueryui'...
Listing './lib/python3.5/site-packages/hurry/jqueryui/jqueryui-build'...
Listing './lib/python3.5/site-packages/hurry/jqueryui/jqueryui-themes'...
Listing './lib/python3.5/site-packages/hurry/jqueryui/jqueryui-themes/base'...
Listing './lib/python3.5/site-packages/hurry/jqueryui/jqueryui-themes/base/images'...
Listing './lib/python3.5/site-packages/hurry/jqueryui/jqueryui-themes/black-tie'...
Listing './lib/python3.5/site-packages/hurry/jqueryui/jqueryui-themes/black-tie/images'...
Listing './lib/python3.5/site-packages/hurry/jqueryui/jqueryui-themes/blitzer'...
Listing './lib/python3.5/site-packages/hurry/jqueryui/jqueryui-themes/blitzer/images'...
Listing './lib/python3.5/site-packages/hurry/jqueryui/jqueryui-themes/cupertino'...
Listing './lib/python3.5/site-packages/hurry/jqueryui/jqueryui-themes/cupertino/images'...
Listing './lib/python3.5/site-packages/hurry/jqueryui/jqueryui-themes/dark-hive'...
Listing './lib/python3.5/site-packages/hurry/jqueryui/jqueryui-themes/dark-hive/images'...
Listing './lib/python3.5/site-packages/hurry/jqueryui/jqueryui-themes/dot-luv'...
Listing './lib/python3.5/site-packages/hurry/jqueryui/jqueryui-themes/dot-luv/images'...
Listing './lib/python3.5/site-packages/hurry/jqueryui/jqueryui-themes/eggplant'...
Listing './lib/python3.5/site-packages/hurry/jqueryui/jqueryui-themes/eggplant/images'...
Listing './lib/python3.5/site-packages/hurry/jqueryui/jqueryui-themes/excite-bike'...
Listing './lib/python3.5/site-packages/hurry/jqueryui/jqueryui-themes/excite-bike/images'...
Listing './lib/python3.5/site-packages/hurry/jqueryui/jqueryui-themes/flick'...
Listing './lib/python3.5/site-packages/hurry/jqueryui/jqueryui-themes/flick/images'...
Listing './lib/python3.5/site-packages/hurry/jqueryui/jqueryui-themes/hot-sneaks'...
Listing './lib/python3.5/site-packages/hurry/jqueryui/jqueryui-themes/hot-sneaks/images'...
Listing './lib/python3.5/site-packages/hurry/jqueryui/jqueryui-themes/humanity'...
Listing './lib/python3.5/site-packages/hurry/jqueryui/jqueryui-themes/humanity/images'...
Listing './lib/python3.5/site-packages/hurry/jqueryui/jqueryui-themes/le-frog'...
Listing './lib/python3.5/site-packages/hurry/jqueryui/jqueryui-themes/le-frog/images'...
Listing './lib/python3.5/site-packages/hurry/jqueryui/jqueryui-themes/mint-choc'...
Listing './lib/python3.5/site-packages/hurry/jqueryui/jqueryui-themes/mint-choc/images'...
Listing './lib/python3.5/site-packages/hurry/jqueryui/jqueryui-themes/overcast'...
Listing './lib/python3.5/site-packages/hurry/jqueryui/jqueryui-themes/overcast/images'...
Listing './lib/python3.5/site-packages/hurry/jqueryui/jqueryui-themes/pepper-grinder'...
Listing './lib/python3.5/site-packages/hurry/jqueryui/jqueryui-themes/pepper-grinder/images'...
Listing './lib/python3.5/site-packages/hurry/jqueryui/jqueryui-themes/redmond'...
Listing './lib/python3.5/site-packages/hurry/jqueryui/jqueryui-themes/redmond/images'...
Listing './lib/python3.5/site-packages/hurry/jqueryui/jqueryui-themes/smoothness'...
Listing './lib/python3.5/site-packages/hurry/jqueryui/jqueryui-themes/smoothness/images'...
Listing './lib/python3.5/site-packages/hurry/jqueryui/jqueryui-themes/south-street'...
Listing './lib/python3.5/site-packages/hurry/jqueryui/jqueryui-themes/south-street/images'...
Listing './lib/python3.5/site-packages/hurry/jqueryui/jqueryui-themes/start'...
Listing './lib/python3.5/site-packages/hurry/jqueryui/jqueryui-themes/start/images'...
Listing './lib/python3.5/site-packages/hurry/jqueryui/jqueryui-themes/sunny'...
Listing './lib/python3.5/site-packages/hurry/jqueryui/jqueryui-themes/sunny/images'...
Listing './lib/python3.5/site-packages/hurry/jqueryui/jqueryui-themes/swanky-purse'...
Listing './lib/python3.5/site-packages/hurry/jqueryui/jqueryui-themes/swanky-purse/images'...
Listing './lib/python3.5/site-packages/hurry/jqueryui/jqueryui-themes/trontastic'...
Listing './lib/python3.5/site-packages/hurry/jqueryui/jqueryui-themes/trontastic/images'...
Listing './lib/python3.5/site-packages/hurry/jqueryui/jqueryui-themes/ui-darkness'...
Listing './lib/python3.5/site-packages/hurry/jqueryui/jqueryui-themes/ui-darkness/images'...
Listing './lib/python3.5/site-packages/hurry/jqueryui/jqueryui-themes/ui-lightness'...
Listing './lib/python3.5/site-packages/hurry/jqueryui/jqueryui-themes/ui-lightness/images'...
Listing './lib/python3.5/site-packages/hurry/jqueryui/jqueryui-themes/vader'...
Listing './lib/python3.5/site-packages/hurry/jqueryui/jqueryui-themes/vader/images'...
Compiling './lib/python3.5/site-packages/hurry/jqueryui/prepare.py'...
***   File "./lib/python3.5/site-packages/hurry/jqueryui/prepare.py", line 21
    print 'recursively removing "%s"' % jquery_dest_path
                                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/hurry/resource'...
Listing './lib/python3.5/site-packages/hurry.jquery-1.4.3.1.egg-info'...
Listing './lib/python3.5/site-packages/hurry.jquerylayout-1.2.0.2.egg-info'...
Listing './lib/python3.5/site-packages/hurry.jqueryui-1.8.5.1.egg-info'...
Listing './lib/python3.5/site-packages/hurry.resource-0.10.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
